Fix this program by polymorphism