@@ -1,42 +1,26 @@
 package weekOne.calculatorTwo;
 
-import weekOne.calculatorTwo.operator.Operator;
 
 import java.util.List;
 
 public class Calculator implements Service{
 
+    // 기본적인 exit, removeFirst, inquiry 동작을 따로 Service로 구현해 상속받아
+    // 해당 클래스에 Overriding 한다.
     // mode의 Interface
-    private double ans;
-    private  Service service;
-    private Operator oper;
     private List<Double> data;
 
-    // 어떤 모드를 실행할지를 결정(DI)
+    // 어떤 모드를 실행할지를 결정 받고, 그에 따른 계산 결과를 생성자를 두개를 만들어 설계
     public Calculator(int a) {
         this.data = new CircleCalculator(a).calculate();
-
     }
-
     public Calculator(int a, int b, char oper) {
         this.data = new OperateCalculator(a, b, oper).calculate(oper);
     }
 
-
-    public void setService(Service service) {
-        this.service = service;
-    }
-
-    public List<Double> getData() {
-        return data;
-    }
-
+    // 얻은 data에 방금 들어간 요소를 main에서 출력하기 위한 것
     public double getAns() {
-        return data.get(data.size()-1);
-    }
-
-    public void setAns(double ans) {
-        this.ans = ans;
+        return data.getLast();
     }
 
     @Override
@@ -47,8 +31,8 @@ public class Calculator implements Service{
 
     @Override
     public void removeFirst() {
-        System.out.println("Remove " + data.get(0) + ".");
-        data.remove(0);
+        System.out.println("Remove " + data.getFirst() + ".");
+        data.removeFirst();
     }
 
     @Override
